--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -98,8 +98,13 @@ panorama_35144743_7626_AB02_41C5_B2BA1C9007B6.label = RUA 15
 panorama_351CEFCC_7626_BB06_41AD_847F1B58C01B.label = RUA 16
 panorama_DCD6A449_D7FE_E39E_41CB_E2A58FF38B23.label = Serrote250m
 panorama_DCD50051_D7FE_E38E_41CE_954BC724C918.label = Serrote500m
+video_3FB31340_7A8E_2E44_41D1_057A3F4C7F41.label = WhatsApp Video 2022-09-26 at 18.46.58 (1)
 panorama_1FE66343_7A22_E176_41C0_666F65211BF7.label = pedra furada (22)
 panorama_27B0EE67_7A22_E33E_41D5_49009399083C.label = pedra furada (23)
+
+### Video
+videolevel_3E1249ED_7A8A_DA5C_41C4_A093F050A8CF.posterURL = media/video_3FB31340_7A8E_2E44_41D1_057A3F4C7F41_poster_pt.jpg
+videolevel_3E1249ED_7A8A_DA5C_41C4_A093F050A8CF.url = media/video_3FB31340_7A8E_2E44_41D1_057A3F4C7F41_pt.mp4
 
 ## Popup
 
